Requires:
~~~~~~~~~
- CPSCore > 3.18.0
- CPSDocument > 0.29.0
- CPSSchema > 0.33.0
- if you want to have an i18n menu you need to replace the basebox_menu
  with an treebox_menu
New features:
~~~~~~~~~~~~~
- enable i18n of folder/document using the translate action
  see doc/i18n-changes-from-CPSDefault-3_29_0.txt for more information
Bug fixes:
~~~~~~~~~~
- The navigation tree now is displayed as well at the root of the portal.
- Trying to add a box container failed in non-quiet mode if there was already
  one.
- CSS remove more IE peekaboo bugs
- Better wording for role acquisition blocking, do not use "Click here" wording.
- Setting the needed(!) missing 'Use external editor' for both sections and
  workspaces, as well as missing WebDAV permissions for sections.
- Fix getBaseUrl with VirtualHostBase and non root installed CPS
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- merging ben-i18n-branch
- basebox_menu is deprecated replace existing basebox_menu with treebox_menu
  which is i18n
- Normalized CSS according to CPS coding guides.