@@ -19,6 +19,8 @@ Bug fixes:
 - Setting the needed(!) missing 'Use external editor' for both sections and
   workspaces, as well as missing WebDAV permissions for sections.
 - Fix getBaseUrl with VirtualHostBase and non root installed CPS
+- Added the first shot for the needed external method to upgrade workflows
+  cf. bug #426
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - merging ben-i18n-branch
